syntax = "proto3";
package proto;
option go_package="./stream";

message StreamReqData{
  string data = 1;
}

message StreamResData{
  string data = 1;
}

service Greeter{
  // 服务端流模式
  rpc GetStream(StreamReqData) returns (stream StreamResData);
  // 客户端流模式
  rpc PostStream(stream StreamReqData) returns (StreamResData);
  //双向流模式
  rpc AllStream(stream StreamReqData) returns(stream StreamResData);
}